fix: correção de overflow-x

--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,6 +1,7 @@
 @use 'variables';
 
 .event {
+    overflow-x: hidden;
     padding: 80px 0;
 
     &--musica{
